refactor: simplify schema, rely on sdk from request
